--- a/backend/hearo_ai/templates/index.html
+++ b/backend/hearo_ai/templates/index.html
@@ -6,20 +6,26 @@
     <h1>Flask-Socket-Test</h1>
 
     <form action="http://127.0.0.1:8090" method="POST">
-      <input type="hidden" name="name" value="hearo"/></p>
-      <input type="hidden" name="room" value="sd"/></p>
+      <input type="hidden" name="username" value="hearo@ssafy.com"/></p>
+      <input type="hidden" name="category" value="chat"/></p>
+      <input type="submit" value="TEST CHAT" /></p>
+    </form>
+
+    <form action="http://127.0.0.1:8090" method="POST">
+      <input type="hidden" name="username" value="hearo@ssafy.com"/></p>
+      <input type="hidden" name="category" value="speaker"/></p>
       <input type="submit" value="화자 분리" /></p>
     </form>
 
     <form action="http://127.0.0.1:8090" method="POST">
-      <input type="hidden" name="name" value="hearo"/></p>
-      <input type="hidden" name="room" value="sl"/></p>
+      <input type="hidden" name="username" value="hearo@ssafy.com"/></p>
+      <input type="hidden" name="category" value="sign-language"/></p>
       <input type="submit" value="수TT" /></p>
     </form>
 
     <form action="http://127.0.0.1:8090" method="POST">
-      <input type="hidden" name="name" value="hearo"/></p>
-      <input type="hidden" name="room" value="sc"/></p>
+      <input type="hidden" name="username" value="hearo@ssafy.com"/></p>
+      <input type="hidden" name="category" value="sound"/></p>
       <input type="submit" value="소리 분류" /></p>
     </form>
   </body>
