--- a/frontend/hearo_web/src/index.css
+++ b/frontend/hearo_web/src/index.css
@@ -9,18 +9,8 @@ body,
   height: 100%;
   width: 100%;
   @apply text-gray-500;
-}
-
-/* @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Montserrat:wght@700&display=swap"); */
-
-html,
-body,
-#root,
-.app {
-  height: 100%;
-  width: 100%;
-  font-family: "DM Sans", sans-serif;
   @apply text-gray-950;
+  font-family: "DM Sans", sans-serif;
 }
 
 /* 캐러셀 좌우 화살표 */
@@ -37,18 +27,38 @@ body,
   border-radius: 100%;
   font-size: 25px;
   color: #e25252;
-
 }
 
 .popover-bottom {
-  @apply after:border-[10px] after:border-b-transparent after:border-r-transparent after:border-l-transparent after:border-t-white;
+  @apply after:border-[10px] after:border-b-transparent after:border-l-transparent after:border-r-transparent after:border-t-white;
 }
 .popover-top {
-  @apply before:border-[10px] before:border-b-white before:border-r-transparent before:border-l-transparent before:border-t-transparent;
+  @apply before:border-[10px] before:border-b-white before:border-l-transparent before:border-r-transparent before:border-t-transparent;
 }
 .popover-left {
-  @apply before:border-[10px] before:border-b-transparent before:border-r-white before:border-l-transparent before:border-t-transparent;
+  @apply before:border-[10px] before:border-b-transparent before:border-l-transparent before:border-r-white before:border-t-transparent;
 }
 .popover-right {
-  @apply after:border-[10px] after:border-b-transparent after:border-r-transparent after:border-l-white after:border-t-transparent;
+  @apply after:border-[10px] after:border-b-transparent after:border-l-white after:border-r-transparent after:border-t-transparent;
+}
+
+@font-face {
+  font-family: "Pretendard-Regular";
+  src: url("./assets/Fonts/Pretendard-Regular.woff") format("woff");
+}
+@font-face {
+  font-family: "Pretendard-Bold";
+  src: url("./assets/Fonts/Pretendard-Bold.woff") format("woff");
+}
+@font-face {
+  font-family: "Pretendard-ExtraBold";
+  src: url("./assets/Fonts/Pretendard-ExtraBold.woff") format("woff");
+}
+@font-face {
+  font-family: "Pretendard-Light";
+  src: url("./assets/Fonts/Pretendard-Light.woff") format("woff");
+}
+@font-face {
+  font-family: "Pretendard-Thin";
+  src: url("./assets/Fonts/Pretendard-Thin.woff") format("woff");
 }
